fix button text vertical align & fontSize

--- a/src/view/body/content/counsulation/consultation.css
+++ b/src/view/body/content/counsulation/consultation.css
@@ -139,7 +139,6 @@
   font-style: normal;
   font-weight: 800;
   font-size: 15px;
-  line-height: 27px;
   text-align: center;
   color: #555654;
 }
